--- a/html/postslist.html
+++ b/html/postslist.html
@@ -3,15 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <!-- TODO: Include Font Awesome file here -->
-  <link rel="stylesheet" href="../styles/fontawesome/css/all.css">
+  <link href="../styles/fontawesome/css/all.css" rel="stylesheet">
 
   <!-- TODO: Include Google Fonts file here -->
   <link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="../styles/postslist.css" />
-  <link rel="stylesheet" type="text/css" href="../styles/common.css" />
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        rel="stylesheet">
+  <link href="../styles/postslist.css" rel="stylesheet" type="text/css"/>
+  <link href="../styles/common.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
@@ -34,16 +35,18 @@
       <div class="content-heading">
         <p class="heading">'let' me be a 'const’(ant), not a ‘var’(iable)!</p>
         <span class="heading-font" onclick="openDeleteModel(1)">
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
+                      <!-- TODO: Include Font Awesome icon for delete icon here -->
+                      <i aria-hidden="true" class="fa fa-trash"></i>
+                  </span>
       </div>
 
-      <p class="content-text">Since JavaScript does not have any type-checking, either of these keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all the three keywords are used for the same purpose, they are different.</p>
-      <span style="float: right;" onclick="openPost()">
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                    <i class="fa fa-ellipsis-h"></i>
-                </span>
+      <p class="content-text">Since JavaScript does not have any type-checking, either of these
+        keywords can be used to declare a variable of any type (datatype) in JavaScript. Though all
+        the three keywords are used for the same purpose, they are different.</p>
+      <span onclick="openPost()" style="float: right;">
+                  <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+                  <i class="fa fa-ellipsis-h"></i>
+              </span>
     </div>
   </div>
   <!-- post 1 ends here -->
@@ -58,16 +61,17 @@
       <div class="content-heading">
         <p class="heading">What is linting and how can it save you time?</p>
         <span class="heading-font" onclick="openDeleteModel(2)">
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
+                      <!-- TODO: Include Font Awesome icon for delete icon here -->
+                      <i aria-hidden="true" class="fa fa-trash"></i>
+                  </span>
       </div>
 
-      <p>One of the biggest challenges in software development is time. It’s something we can’t easily get more of, but linting can help us make the most out of the time we have.</p>
-      <span style="float: right;" onclick="openPost()">
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                    <i class="fa fa-ellipsis-h"></i>
-                </span>
+      <p>One of the biggest challenges in software development is time. It’s something we can’t
+        easily get more of, but linting can help us make the most out of the time we have.</p>
+      <span onclick="openPost()" style="float: right;">
+                  <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+                  <i class="fa fa-ellipsis-h"></i>
+              </span>
     </div>
   </div>
   <!-- post 2 ends here -->
@@ -82,16 +86,18 @@
       <div class="content-heading">
         <p class="heading">How to Get More Views on Your Tech Blog</p>
         <span class="heading-font" onclick="openDeleteModel(3)">
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
+                      <!-- TODO: Include Font Awesome icon for delete icon here -->
+                      <i aria-hidden="true" class="fa fa-trash"></i>
+                  </span>
       </div>
 
-      <p>If you're a developer with a Twitter account, you've already seen everyone and their cat start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very least, a recognizable name in the industry.</p>
-      <span style="float: right;" onclick="openPost()">
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                    <i class="fa fa-ellipsis-h"></i>
-                </span>
+      <p>If you're a developer with a Twitter account, you've already seen everyone and their cat
+        start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very
+        least, a recognizable name in the industry.</p>
+      <span onclick="openPost()" style="float: right;">
+                  <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+                  <i class="fa fa-ellipsis-h"></i>
+              </span>
     </div>
   </div>
   <!-- post 3 ends here -->
@@ -106,17 +112,19 @@
       <div class="content-heading">
         <p class="heading">How to write easily describable code</p>
         <span class="heading-font" onclick="openDeleteModel(4)">
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
+                      <!-- TODO: Include Font Awesome icon for delete icon here -->
+                      <i aria-hidden="true" class="fa fa-trash"></i>
+                  </span>
       </div>
 
-      <p>When code is not describable using words, most people have to do some mental mapping to turn it in to words. This wastes mental energy, and you run the risk of getting the mapping wrong. Different people will map to different words, which
+      <p>When code is not describable using words, most people have to do some mental mapping to
+        turn it in to words. This wastes mental energy, and you run the risk of getting the mapping
+        wrong. Different people will map to different words, which
         leads to confusion when discussing the code.</p>
-      <span style="float: right;" onclick="openPost()">
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                    <i class="fa fa-ellipsis-h"></i>
-                </span>
+      <span onclick="openPost()" style="float: right;">
+                  <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+                  <i class="fa fa-ellipsis-h"></i>
+              </span>
     </div>
   </div>
   <!-- post 4 ends here -->
@@ -131,17 +139,19 @@
       <div class="content-heading">
         <p class="heading">Everything you should know about ‘module’ & ‘require’ in Node.js</p>
         <span class="heading-font" onclick="openDeleteModel(5)">
-                        <!-- TODO: Include Font Awesome icon for delete icon here -->
-                        <i class="fa fa-trash" aria-hidden="true"></i>
-                    </span>
+                      <!-- TODO: Include Font Awesome icon for delete icon here -->
+                      <i aria-hidden="true" class="fa fa-trash"></i>
+                  </span>
       </div>
 
-      <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file containing some code and this file is named xyz.js, then this file is treated as a module in Node, and you can say that you’ve created a module
+      <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file
+        containing some code and this file is named xyz.js, then this file is treated as a module in
+        Node, and you can say that you’ve created a module
         named xyz.</p>
-      <span style="float: right;" onclick="openPost()">
-                    <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
-                    <i class="fa fa-ellipsis-h"></i>
-                </span>
+      <span onclick="openPost()" style="float: right;">
+                  <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
+                  <i class="fa fa-ellipsis-h"></i>
+              </span>
     </div>
   </div>
   <!-- post 5 ends here -->
@@ -150,12 +160,14 @@
 
 </div>
 <div class="model-section">
-  <div id="confirmer-modal" class="modal">
+  <div class="modal" id="confirmer-modal">
     <div class="modal-content">
       <p class="model-heading">Are you sure want to delete this post?</p>
       <div class="confirmer-action">
-        <button type="button" onclick="deletePost(true)" class="left-btn btn btn-success">Yes</button>
-        <button type="button" onclick="deletePost(false)" class="right-btn btn btn-danger">No</button>
+        <button class="left-btn btn btn-success" onclick="deletePost(true)" type="button">Yes
+        </button>
+        <button class="right-btn btn btn-danger" onclick="deletePost(false)" type="button">No
+        </button>
       </div>
     </div>
   </div>
