--- a/html/postslist.html
+++ b/html/postslist.html
@@ -66,7 +66,7 @@
                   </span>
       </div>
 
-      <p>One of the biggest challenges in software development is time. It’s something we can’t
+      <p class="content-text">One of the biggest challenges in software development is time. It’s something we can’t
         easily get more of, but linting can help us make the most out of the time we have.</p>
       <span onclick="openPost()" style="float: right;">
                   <!-- TODO: Include Font Awesome icon for horizontal ellipsis icon here -->
@@ -91,7 +91,7 @@
                   </span>
       </div>
 
-      <p>If you're a developer with a Twitter account, you've already seen everyone and their cat
+      <p class="content-text">If you're a developer with a Twitter account, you've already seen everyone and their cat
         start a blog, YouTube channel, or Patreon. We all want to become stars, or at the very
         least, a recognizable name in the industry.</p>
       <span onclick="openPost()" style="float: right;">
@@ -117,7 +117,7 @@
                   </span>
       </div>
 
-      <p>When code is not describable using words, most people have to do some mental mapping to
+      <p class="content-text">When code is not describable using words, most people have to do some mental mapping to
         turn it in to words. This wastes mental energy, and you run the risk of getting the mapping
         wrong. Different people will map to different words, which
         leads to confusion when discussing the code.</p>
@@ -144,7 +144,7 @@
                   </span>
       </div>
 
-      <p>Node.js treats each JavaScript file as a separate module. For instance, if you have a file
+      <p class="content-text">Node.js treats each JavaScript file as a separate module. For instance, if you have a file
         containing some code and this file is named xyz.js, then this file is treated as a module in
         Node, and you can say that you’ve created a module
         named xyz.</p>
