--- a/html/posts.html
+++ b/html/posts.html
@@ -16,47 +16,12 @@
   <link href="../styles/common.css" rel="stylesheet" type="text/css"/>
 </head>
 
-<body onload="populatePost()">
+<body onload=" showPostForEdit(document.location.search.substr(7));populatePost(document.location.search.substr(7));">
 <div id="header">
 </div>
+<div id="editPostSection">
 
 </div>
-<div class="custom-container">
-  <form>
-    <h4 id="title">Every thing you should know about module and require in node.js</h4>
-    <div class="form-group">
-      <input class="form-control" id="post-title-edit" type="text"/>
-    </div>
-    <div id="authorSection">
-      <span id="authName">Sristhi Gupta</span>
-      <span>
-                  <button class="btn btn-danger" id="edit-save-button"
-                          onclick="onEditButtnClicked()" style="float:right;" type="button">Edit <i
-                      class="fa fa-edit"></i></button>
-              </span>
-    </div>
-    <div class="form-group">
-      <textarea class="form-control" id="post-contents" rows="10"></textarea>
-    </div>
-    <button class="btn btn-danger" id="likeBtn" onclick="onLikesButtonCLicked()" type="button"><i
-        class="fa fa-thumbs-up"></i>Like
-    </button>
-  </form>
-  <p id="likesCount">Be the first one to like this!</p>
-</div>
-<div class="comment-section">
-  <form>
-    <div class="form-group">
-      <textarea class="form-control" id="post-comment" placeholder="Enter a comment" required
-                rows="4"></textarea>
-    </div>
-    <button class="btn btn-danger" onclick="onCommentButtonClicked()" type="button">Comment</button>
-  </form>
-</div>
-<div class="posted-comments" id="postedCommentsSection">
-
-</div>
-
 <script src="../scripts/common.js" type="text/javascript"></script>
 <script src="../scripts/posts.js" type="text/javascript"></script>
 <script src="../scripts/index.js" type="text/javascript"></script>
